# Fetlife-Discord-Bot

./: .codex-policy.yml  .env.example  .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  Makefile  README.markdown  alembic.ini  codex.sh  composer.json  config.yaml  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  toaster.md
.github/: AGENTS.md  CODEOWNERS  RELEASE_NOTES.md
.github/workflows/: backup-dr.yml  deploy-validation.yml  release-hygiene.yml  release.yml
adapter/: AGENTS.md  Dockerfile  composer.json  openapi.yaml
adapter/public/: AGENTS.md  index.php
alembic/: AGENTS.md  env.py
alembic/versions/: 0001_initial.py  0002_add_accounts.py  0003_prefix_sha256_hashes.py  0004_add_lookup_indexes.py  0005_add_audit_log.py  (+2 more)
bot/: AGENTS.md  Dockerfile  __init__.py  adapter_client.py  audit.py  birthday.py  circuit_breaker.py  config.py  db.py  main.py  models.py  moderation.py  polling.py  rate_limit.py  storage.py  tasks.py  telegram_bridge.py  utils.py  welcome.py
docs/: AGENTS.md  alert-runbook.md  libfetlife.md  production.md
schemas/: AGENTS.md  event.json  event_attendees.json  group_post.json  message.json
scripts/: AGENTS.md  agents-verify.sh  backup-verify.sh  commit-msg  deploy-validate.sh  dr-validate.sh  drift-check.sh  health-check.sh  install.sh  setup.sh
src/: AGENTS.md  Connection.php  ConnectionInterface.php  Event.php  Profile.php  User.php
tests/: AGENTS.md  CookieCleanupTest.php  FetLifeUserTest.php  MissingTokenTest.php  UserTest.php  docker-compose.test.yml  phpunit.xml
(+73 files in other folders)
