[project]
name = "fetlife-discord-bot"
version = "0.7.0"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
